BAP-5594: dashboard visual issues on mobile

--- a/src/Oro/Bundle/DashboardBundle/Resources/public/css/less/dashboard.less
+++ b/src/Oro/Bundle/DashboardBundle/Resources/public/css/less/dashboard.less
@@ -355,6 +355,11 @@
       position: absolute;
       padding-bottom: .5em;
     }
+    .flotr-grid-label-x {
+      line-height: 14px;
+      overflow-x: hidden;
+      text-overflow: ellipsis;
+    }
   }
 }
 .chart-legend table {
