--- a/src/Oro/Bundle/UIBundle/Resources/public/css/less/mobile/dashboard.less
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/less/mobile/dashboard.less
@@ -78,6 +78,9 @@
 .chart-container {
   &>.clearfix {
     max-width: 100%;
+    .chart-legend {
+      padding-bottom: 8px;
+    }
   }
 }
 
@@ -99,12 +102,23 @@
 }
 .dashboard-container-wrapper{
   .dashboard-widget {
-    .title {
-      padding-right: 45px;
-    }
-
     .action-wrapper.sortable {
       display: none;
+    }
+  }
+}
+@media only screen and (max-width: 480px) {
+  .action-container + .pull-right.actions-container {
+    width: 90px;
+  }
+
+  .actions-container .widget-actions-container {
+    position: absolute;
+    top: 44px;
+    right: -1px;
+    float: none;
+    .action-wrapper:last-child {
+      border-right: none;
     }
   }
 }
